<?xml version="1.0" encoding="utf-8"?>
	<!--
		* Copyright (C) 2007 Google Inc. * * Licensed under the Apache
		License, Version 2.0 (the "License"); * you may not use this file
		except in compliance with the License. * You may obtain a copy of the
		License at * * http://www.apache.org/licenses/LICENSE-2.0 * * Unless
		required by applicable law or agreed to in writing, software *
		distributed under the License is distributed on an "AS IS" BASIS, *
		WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
		implied. * See the License for the specific language governing
		permissions and * limitations under the License.
	-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="activity_sample_code">API Demos</string>

	<!-- =============================== -->
	<!--  app/activity examples strings  -->
	<!-- =============================== -->
	<string name="hello">HelloWorld</string>
	<string name="hello_world">HelloWorld</string>
	<string name="logo_text">Welcome to HelloWorld!</string>
	
	<string name="about_version">Alpha 1.2</string>

	<!-- Label-Sections -->
	<string name="activity_login">HelloWorld - Login</string>
	<string name="activity_about">HelloWorld - About</string>
	<string name="activity_contact_down">HelloWorld - Download a Subprofile</string>
	<string name="activity_profile">HelloWorld - Your Account Details</string>
	<string name="activity_contact">HelloWorld - Show Contact Details</string>
	<string name="activity_import">HelloWorld - Choose your Import</string>
	<string name="activity_import_existing_account">HelloWorld - Import Your HelloWorld Account!</string>
	<string name="activity_import_from_network">HelloWorld - Import a Profile from Network</string>
	<string name="activity_import_from_network_chooser">HelloWorld - Import Profile - Enter URL</string>
	<string name="activity_import_mail">HelloWorld - Mail-Client</string>
	<string name="activity_show_own_hcard">HelloWorld - Show your own HCard</string>
	<string name="activity_edit_own_hcard">HelloWorld - Edit your own HCard</string>
	<string name="activity_invitefriend">HelloWorld - Invite a User</string>
	<string name="activity_write_message">HelloWorld - Write a Message</string>
	<string name="activity_mail_checker">HelloWorld - Checking your Mails</string>

	<string name="login_text_head">Login</string>
	<string name="login_username_input"></string>
	<string name="login_username">User</string>
	<string name="login_password_input"></string>
	<string name="login_password">Password</string>
	<string name="login_button_contact">Contact</string>
	<string name="login_button_login">Login</string>
	<string name="login_button_import">Import Profile</string>
	<string name="login_error_noaccount">Sorry, no Account for this\nusername could be found!</string>
	<string name="login_error_pw">Sorry, wrong password!</string>
	<string name="login_error_empty">Please fill out the fields!</string>
	
	<string name="newsubprofile_text_head">Create a new Group</string>
	
	<string name="contacttypes_button_new">New Group</string>
	<string name="contacttypes_button_gallery">View Gallery</string>
	<string name="contacttypes_button_save">Save</string>
	<string name="contacttypes_text_new">Group Name</string>
	<string name="contacttypes_text_url">Please check download-Url (for Http):</string>
	<string name="contacttypes_text_head">Contact Groups</string>

	<string name="write_message_text_head">Write Message</string>
	<string name="importaccount_text_head">Import your HelloWorld-Account</string>
	

	<string name="createaccount_text_username">Username</string>
	<string name="createaccount_text_password">Password</string>
	<string name="createaccount_text_password_w">Confirm Password</string>
	<string name="createaccount_text_fullname">Fullname</string>
	<string name="createaccount_text_head">Create a new Account</string>

	<string name="hcardown_text_head">My Profile</string>
	
	<string name="contactsgallery_text_head">Contacts</string>
	<string name="message_checker_text_head">Check for new Messages</string>
		
	<string name="contacts_text_head">Contacts</string>
	<string name="contacts_button_invite">Invite Friend</string>
	<string name="contacts_button_editgroup">Edit Group</string>
	
	
	<!-- HCard - Button for editing the profile  -->
	<string name="hcard_button_edit">Edit</string>
	<string name="hcard_button_confirm">Confirm</string>
	<string name="hcard_button_cancel">Cancel</string>
	<string name="hcard_button_message">Write Message</string>
	<string name="hcard_text_head">Friends Profile</string>
	
	
    <!-- Menu Items -->
	<!-- the profile-menu -->
	<string name="menuitem_home">Home</string>
	<string name="menuitem_contacts">Contacts</string>
	<string name="menuitem_map">Map</string>
	<string name="menuitem_mail">Check Mails</string>
	<string name="menuitem_settings">Settings</string>
	<string name="menuitem_logout">Logout</string>
	<!-- the login-menu -->
	<string name="menuitem_create">Create Account</string>
	<string name="menuitem_import">Import</string>
	<string name="menuitem_help">About</string>
	
	<!-- import-chooser -->
	<string name="import_hw_button">Import HelloWorld-Account</string>
	<string name="import_network_button">Import From Community</string>
	
	<!-- settings-chooser -->
	<string name="setchooser_configuration">Configuration</string>
	<string name="setchooser_export">Export</string>
	<string name="setchooser_button_incoming">Incoming Mail</string>
	<string name="setchooser_button_outgoing">Outgoing Mail</string>
    <string name="setchooser_button_ftp">FTP</string>
    <string name="setchooser_button_pkey">Upload Public-Key</string>
    <string name="setchooser_button_export">Export Account</string>
    
    <!-- settings-->
    <string name="settings_incoming_button_save">Save</string>
    <string name="settings_edittext_adress">Email-Address</string>
    <string name="settings_ftp_httpurl">Http-Host for download</string>
    
    <!-- content_download_form -->
	<string name="contact_down_url">URL zum Profil</string>
	<string name="contact_down_key">Authorisierungs-KEY</string>
	<string name="download">Download and Decrypt Profile</string>

	<string name="main_title">HelloWorld - Contactfinder</string>
	<string name="main_menu_open_map">Open visual FriendTracker</string>
	<string name="main_list_format">$name ($distance km)</string>
	<string name="main_list_geo_not_set">not set</string>
	<string name="map_title">HelloWorld - Contactfinder</string>
	<string name="map_menu_zoom_in">Zoom in (Key: I)</string>
	<string name="map_menu_zoom_out">Zoom out (Key: O)</string>
	<string name="map_menu_back_to_list">Back to list</string>
	<string name="map_menu_toggle_street_satellite">Toggle View: Street / Satellite (Key: T)</string>
	<string name="map_overlay_own_name">Me</string>

	<!-- import_existing_account -->
	<string name="import_existing_account_url">URL to your Account:</string>
	<string name="import_existing_account_user">Your Username:</string>
	<string name="import_existing_account_button_download">Download and Save your Account</string>
	
	<!-- import_profile_from_network -->
	<string name="import_profile_from_network_head">Imported Profile</string>
	
	<!-- import_profiel_from_network chooser -->
	<string name="import_profile_from_network_button">Import</string>

	<!-- =============================== -->
	<!--  mail-client: send  -->
	<!-- =============================== -->
	<string name="mail_send_mail_hello">Hello World, MailTest</string>
	<string name="mail_send_button_defaultdata">Insert Data from Account</string>
	<string name="mail_send_smtps">SMTPS (SSL/TLS)</string>
	<string name="mail_send_smtp">SMTP</string>
	<string name="mail_send_pop3">POP3</string>
	<string name="mail_send_pop3s">POP3S</string>
	<string name="mail_send_imap">IMAP</string>
	<string name="mail_send_imaps">IMAPS</string>
	<string name="mail_send_nntp">NNTP</string>
	<string name="mail_send_nntps">NTPS</string>
	<string name="mail_send_ftp">FTP</string>
	<string name="mail_send_ftps">FTPS</string>
	<string name="mail_send_host">Host (SMTP-Server)</string>
	<string name="mail_send_ftp_host">Host (FTP-Server)</string>
	<string name="mail_send_port">Port</string>
	<string name="mail_send_button_send">Send</string>
	<string name="mail_send_user">Username</string>
	<string name="mail_send_from">From</string>
	<string name="mail_send_to">To</string>
	<string name="mail_send_body">Body</string>
	<string name="mail_send_subject">Subject</string>
	<string name="mail_send_password">Password</string>
	<string name="mail_send_host_pop3">Host (POP3-Server)</string>
	<string name="mail_send_host_pop3_hint">pop.yourhoster.com</string>
	<string name="mail_send_host_hint">smtp.yourhoster.com</string>
	<string name="mail_send_host_ftp_hint">ftp.yourhoster.com</string>
	<string name="mail_send_port_hint">465</string>
	<string name="port_hint_smtps">465</string>
	<string name="port_hint_smtp">25</string>
	<string name="port_hint_pop3s">995</string>
	<string name="port_hint_pop3">110</string>
	<string name="port_hint_ftps">990</string>
	<string name="port_hint_ftp">21</string>
	<string name="mail_send_user_hint">Your Username</string>
	<string name="mail_send_from_hint">Your Email-Address</string>
	<string name="mail_send_to_hint">E-Mail-Address from Recipient(s)</string>
	<string name="mail_send_body_hint">Your Email-Text</string>

    <string name="invitefriend_text_head">Invite a User</string>
	<string name="invitefriend_button_invite">Invite!</string>
	<string name="invitefriend_messagecomment">Invite Comment</string>
	<string name="invitefriend_email">Email-Address</string>
	<string name="invitefriend_pk">URL to PublicKey</string>
	
	<string name="message_from">From:</string>
	<string name="message_subject">Subject:</string>
	<string name="message_text">Message:</string>
	
</resources>

