<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:scrollbarSize="12dip" android:background="@drawable/bg">

	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:stretchColumns="1">

		<!-- linearlayout for aligning the picked photo -->
		<LinearLayout android:id="@+id/banner"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			style="@style/logo_padding">
			<!--
				imageview for the picked photo is refering to drawable/logo_big.png
			-->
			<ImageView android:id="@+id/photo" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:gravity="left" style="@style/logo" />

		</LinearLayout>

		<TableRow>
			<Button android:id="@+id/mail_send_button_defaultdata"
				android:text="@string/mail_send_button_defaultdata"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:layout_marginRight="10px"
				android:layout_marginLeft="6px" />
		</TableRow>

		<TableRow>
			<RadioGroup android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="horizontal">

				<RadioButton android:id="@+id/mail_send_smtps"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/mail_send_smtps" />

				<RadioButton android:id="@+id/mail_send_smtp"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/mail_send_smtp" />

			</RadioGroup>
		</TableRow>

		<TableRow>
			<TextView android:text="@string/mail_send_host"
				android:layout_weight="1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" style="@style/ListItemValue" />
			<TextView android:text="@string/mail_send_port"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/mail_send_host"
				android:layout_weight="1" android:layout_width="wrap_content"
				android:singleLine="true" android:textAppearance="?android:attr/textAppearanceMedium"
				android:layout_height="wrap_content" android:hint="@string/mail_send_host_hint"
				android:autoText="true" />
			<EditText android:id="@+id/mail_send_port"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:singleLine="true" android:hint="@string/mail_send_port_hint" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/mail_send_user" style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/mail_send_user"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:singleLine="true" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/mail_send_password" style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/mail_send_password"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:password="true" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/mail_send_from" style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/mail_send_from"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:singleLine="true" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/mail_send_to" style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/mail_send_to"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:singleLine="true" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/mail_send_subject" style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/mail_send_subject"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:singleLine="true" />
		</TableRow>

		<TableRow>
			<TextView android:text="@string/mail_send_body" style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/mail_send_body"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1.0" android:gravity="left|top"
				android:minLines="5" android:autoText="true" />
		</TableRow>

		<TableRow>
			<Button android:id="@+id/mail_send_button_send"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:text="@string/mail_send_button_send" android:layout_weight="1" />
		</TableRow>

		<TextView android:id="@+id/mail_send_result_field"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			style="@style/ListItemValue">
		</TextView>

	</TableLayout>

</ScrollView>