<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/widget126" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg"
	xmlns:android="http://schemas.android.com/apk/res/android">

<TableLayout 
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:stretchColumns="1"
>
   
	<!-- linearlayout for aligning the picked photo -->
	<LinearLayout android:id="@+id/banner"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		style="@style/logo_padding">
		<!--
			imageview for the picked photo is refering to drawable/logo_big.png
		-->
		<ImageView android:id="@+id/photo" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:gravity="left" style="@style/logo" />

	</LinearLayout>
	
	
	
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/setchooser_configuration"
			style="@style/head"
	/>
	<Button android:id="@+id/setchooser_button_incoming"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/setchooser_button_incoming"/>
			
	<Button android:id="@+id/setchooser_button_outgoing"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/setchooser_button_outgoing"/>
			
	<Button android:id="@+id/setchooser_button_ftp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/setchooser_button_ftp"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/setchooser_export"
			style="@style/head"
	/>		
	<Button android:id="@+id/setchooser_button_pkey"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/setchooser_button_pkey"/>
	<Button android:id="@+id/setchooser_button_export"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/setchooser_button_export"/>
	</TableLayout>
	
</ScrollView>