<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:scrollbarSize="12dip" android:background="@drawable/bg">

	<TableLayout 
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:stretchColumns="1">

   	<!-- linearlayout for aligning the picked photo -->
	<LinearLayout android:id="@+id/banner"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/logo_padding"
		
		>
		<!--
			imageview for the picked photo is refering to drawable/logo_big.png
		-->
		<ImageView android:id="@+id/photo" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:gravity="left"
			style="@style/logo"
			 />

	</LinearLayout>
		
		<TextView android:layout_width="wrap_content"
			android:id="@+id/invitefriend_text_head"
			android:layout_height="wrap_content" android:text="@string/invitefriend_text_head"
style="@style/head" />

		<TableRow>
			<TextView android:text="@string/invitefriend_email"
	style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/invitefriend_email"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:singleLine="true"
/>
		</TableRow>

		<TableRow>
			<TextView android:text="@string/invitefriend_pk"
style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/invitefriend_pk"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:singleLine="true"
/>
		</TableRow>

		<TableRow>
			<TextView android:text="@string/invitefriend_messagecomment"
				style="@style/ListItemValue" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/invitefriend_messagecomment"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1.0" android:gravity="left|top"
				android:minLines="5" android:autoText="true"
/>
		</TableRow>

		<TableRow>
			<Button android:id="@+id/invitefriend_button_invite"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1"

				android:text="@string/invitefriend_button_invite" />
		</TableRow>
		
		<TextView android:id="@+id/mail_send_result_field"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			style="@style/info">
		</TextView>
	</TableLayout>

</ScrollView>