<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/widget126" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg"
	xmlns:android="http://schemas.android.com/apk/res/android">
        
<TableLayout
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:stretchColumns="1">
   
		<!-- linearlayout for aligning the picked photo -->
		<LinearLayout android:id="@+id/banner"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			style="@style/logo_padding">
			<!--
				imageview for the picked photo is refering to drawable/logo_big.png
			-->
			<ImageView android:id="@+id/photo" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:gravity="left" style="@style/logo" />

		</LinearLayout>


		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/createaccount_text_head"
			style="@style/head" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/createaccount_text_username"
			style="@style/edittext_head">
		</TextView>
		<EditText android:id="@+id/createaccount_text_username"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:singleLine="true" />
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/createaccount_text_password"
			style="@style/edittext_head">
		</TextView>
		<EditText android:id="@+id/createaccount_text_password"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:singleLine="true" android:password="true" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/createaccount_text_password_w"
			style="@style/edittext_head">
		</TextView>
		<EditText android:id="@+id/createaccount_text_password_w"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:singleLine="true" android:password="true" />

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/createaccount_text_fullname"
			style="@style/edittext_head">
		</TextView>
		<EditText android:id="@+id/createaccount_text_fullname"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:singleLine="true" />

		<Button android:id="@+id/createaccount_button_create"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:text="Create Profile">
		</Button>

	</TableLayout>
</ScrollView>