<?xml version="1.0" encoding="utf-8"?>
<!-- 
 * Copyright (C) 2007 Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<ScrollView android:id="@+id/widget126" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg"
	xmlns:android="http://schemas.android.com/apk/res/android">
        
<TableLayout
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:stretchColumns="1">
   
   	<!-- linearlayout for aligning the picked photo -->
	<LinearLayout android:id="@+id/banner"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		style="@style/logo_padding"
		
		>
		<!--
			imageview for the picked photo is refering to drawable/logo_big.png
		-->
		<ImageView android:id="@+id/photo" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:gravity="left"
			style="@style/logo"
			 />

	</LinearLayout>

	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/login_text_head"
		style="@style/head" />
		
       <TextView
           android:text="@string/login_username"
           style="@style/edittext_head"/>

       <EditText android:id="@+id/login_username_input"
           android:scrollHorizontally="true" 
           android:singleLine="true"
           style="@style/edittext"/>

       <TextView
           android:text="@string/login_password"
           style="@style/edittext_head"/>

       <EditText android:id="@+id/login_password_input"
           android:text="@string/login_password_input"
           android:password="true"
           android:scrollHorizontally="true" 
           android:singleLine="true" 
           style="@style/edittext"/>

<Button android:id="@+id/login_button_login"
           android:text="@string/login_button_login" 
           style="@style/button"/>
   
 <TableRow>
 		       <TextView
           android:textStyle="bold"
           android:gravity="right"
           android:padding="3dip" />
<TextView
android:id="@+id/error_field"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:padding="3dip" style="@style/info"
android:layout_marginRight="10px"
				android:layout_marginLeft="3px"
/>
           
   </TableRow>

</TableLayout>
  
</ScrollView>