<?xml version="1.0" encoding="UTF-8"?>

<ScrollView android:id="@+id/widget126" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/bg"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<TableLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:stretchColumns="1">

		<!-- linearlayout for aligning the picked photo -->
		<LinearLayout android:id="@+id/banner"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			style="@style/logo_padding">
			<!--
				imageview for the picked photo is refering to drawable/logo_big.png
			-->
			<ImageView android:id="@+id/photo" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:gravity="left" style="@style/logo" />

		</LinearLayout>
		
		<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/importaccount_text_head"
				style="@style/head" />

		<TableRow>
			<TextView android:text="@string/import_existing_account_url"
				 android:layout_marginTop="3dip"
				style="@style/edittext_head"/>
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/import_existing_account_url"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:scrollHorizontally="true" 
				style="@style/edittext" android:singleLine="true"/>
		</TableRow>

		<TableRow>
			<TextView android:text="@string/import_existing_account_user"
				 android:padding="3dip" style="@style/edittext_head" />
		</TableRow>
		<TableRow>
			<EditText android:id="@+id/import_existing_account_user"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1" android:scrollHorizontally="true" 
				style="@style/edittext" android:singleLine="true"/>
		</TableRow>

		<TableRow>
			<Button android:id="@+id/import_existing_account_button_download"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/import_existing_account_button_download" />
		</TableRow>

		<TextView android:id="@+id/success_field"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:padding="3dip" style="@style/info">
		</TextView>

		<TextView android:id="@+id/error_field" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:padding="3dip" style="@style/info">
		</TextView>
	</TableLayout>

</ScrollView>